--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       type="image/x-icon"
     />
     <link href="/dist/style/output.css" rel="stylesheet" />
+
+    <!-- Swiper JS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </head>
   <body>
     <header>
@@ -161,58 +168,72 @@
           <h1 class="text-[40px] font-medium">GET TO KNOW JAPANESE</h1>
         </div>
         <get-know-japan-element></get-know-japan-element>
-        <!-- <div class="grid grid-cols-5 items-center justify-center gap-0">
-          <div class="relative h-[421px] select-none" id="card">
-            <div
-              class="relative h-full w-full blur-none"
-              id="cardImageContainer"
+      </section>
+
+      <section class="mt-12 flex flex-col items-center justify-center">
+        <div class="h-[90px] w-1 bg-secondary"></div>
+        <h2 class="mt-7 text-[25px] font-medium">
+          DESTINATION <span class="font-semibold text-secondary">行き先</span>
+        </h2>
+        <h2 class="mt-7 text-[25px] font-semibold text-secondary">
+          最高の目的地の推奨事項
+        </h2>
+        <h1 class="pb-2 pt-1 text-[35px] font-semibold">
+          BEST DESTINATION RECOMMENDATION
+        </h1>
+        <p class="w-5/12 text-center text-xl tracking-wide text-white/50">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <div class="container mt-14 flex items-center justify-center">
+          <div class="flex-1">
+            <img
+              src="/dist/assets/images/benua-jepang.png"
+              alt="benua-jepang"
+              class="h-[550px] w-[550px] object-cover"
+            />
+          </div>
+          <div class="flex-1">
+            <img
+              src="/dist/assets/logo.png"
+              alt="Logo Sakura Japan"
+              class="mb-7 h-[68px] w-[68px]"
+            />
+            <p class="text-[25px] font-semibold text-accent">
+              日本にはたくさんの最高の目的地があります
+            </p>
+            <h1 class="w-10/12 pb-10 pt-1 text-[50px] font-bold">
+              THERE ARE MANY BEST DESTINATIONS IN JAPAN
+            </h1>
+            <p class="w-9/12 pb-8 text-lg font-medium tracking-wider">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <button
+              class="rounded-md border-4 border-accent px-16 py-7 text-lg font-semibold transition duration-300 hover:bg-accent"
             >
-              <img
-                src="/dist/assets/images/japan-culture.png"
-                alt="Japan Culture"
-                class="h-full w-full object-cover object-bottom"
-              />
-              <div
-                class="absolute inset-0 bg-gradient-to-t from-black to-transparent"
-              ></div>
-            </div>
-            <div
-              class="absolute bottom-5 left-1/2 w-full -translate-x-1/2 px-10"
-            >
-              <div
-                class="flex -translate-y-0 flex-col items-center transition-all duration-200"
-                id="cardArrowContainer"
-              >
-                <p class="text-3xl font-medium">CULTURE</p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="50"
-                  height="50"
-                  viewBox="0 0 24 24"
-                  class="rotate-0 duration-300"
-                  id="cardArrow"
-                >
-                  <g fill="none" fill-rule="evenodd">
-                    <path
-                      d="M24 0v24H0V0h24ZM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035c-.01-.004-.019-.001-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427c-.002-.01-.009-.017-.017-.018Zm.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093c.012.004.023 0 .029-.008l.004-.014l-.034-.614c-.003-.012-.01-.02-.02-.022Zm-.715.002a.023.023 0 0 0-.027.006l-.006.014l-.034.614c0 .012.007.02.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01l-.184-.092Z"
-                    />
-                    <path
-                      fill="white"
-                      d="M10.94 7.94a1.5 1.5 0 0 1 2.12 0l5.658 5.656a1.5 1.5 0 1 1-2.122 2.121L12 11.121l-4.596 4.596a1.5 1.5 0 1 1-2.122-2.12l5.657-5.658Z"
-                    />
-                  </g>
-                </svg>
-              </div>
-              <p
-                class="absolute bottom-3 left-1/2 w-full -translate-x-1/2 px-10 pt-8 text-center text-lg opacity-0 transition-all duration-300"
-                id="cardDesc"
-              >
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </div>
-          </div> 
-        </div> -->
+              EXPLORE NOW
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="flex flex-col items-center justify-center py-28">
+        <div class="h-[90px] w-1 bg-secondary"></div>
+        <h2 class="mt-7 text-[25px] font-medium">
+          GALLERY <span class="font-semibold text-secondary">ギャラリー</span>
+        </h2>
+        <h2 class="mt-7 text-[25px] font-semibold text-secondary">
+          観光客からのいくつかの写真
+        </h2>
+        <h1 class="pb-2 pt-1 text-[35px] font-semibold">
+          SOME PHOTOS FROM TOURISTS
+        </h1>
+        <p class="w-5/12 text-center text-xl tracking-wide text-white/50">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <photo-from-tourist-element></photo-from-tourist-element>
       </section>
     </main>
 
