--- a/index.html
+++ b/index.html
@@ -235,7 +235,133 @@
         </p>
         <photo-from-tourist-element></photo-from-tourist-element>
       </section>
+
+      <section
+        class="container relative flex flex-col items-center justify-center"
+      >
+        <h2 class="text-[25px] font-semibold text-accent">オールギャラリー</h2>
+        <h1 class="text-[30px] font-bold">ALL GALLERY</h1>
+
+        <div class="mt-14 grid grid-cols-3 items-start justify-center gap-8">
+          <div class="grid-row-3 grid gap-8">
+            <img
+              src="/dist/assets/images/galery/galery-1.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-2.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-3.png"
+              class="w-full object-cover"
+            />
+          </div>
+          <div class="grid-row-3 grid gap-8">
+            <img
+              src="/dist/assets/images/galery/galery-4.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-5.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-6.png"
+              class="w-full object-cover"
+            />
+          </div>
+          <div class="grid-row-3 grid gap-8">
+            <img
+              src="/dist/assets/images/galery/galery-7.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-8.png"
+              class="w-full object-cover"
+            />
+            <img
+              src="/dist/assets/images/galery/galery-9.png"
+              class="w-full object-cover"
+            />
+          </div>
+        </div>
+        <div
+          class="absolute bottom-0 right-0 z-50 h-[400px] w-full bg-gradient-to-t from-primary to-transparent transition-all duration-200"
+          id="gradientGallery"
+        ></div>
+        <button
+          class="absolute bottom-5 left-1/2 z-[99] -translate-x-1/2 translate-y-0 p-4 text-2xl font-medium opacity-100 transition-all duration-300 hover:text-white/70"
+          id="seeMoreGallery"
+        >
+          See More
+        </button>
+      </section>
+
+      <section
+        class="container my-28 flex flex-col items-center justify-center gap-8"
+      >
+        <div class="flex items-center justify-between px-32">
+          <h1 class="w-6/12 text-[80px] font-semibold">
+            BOOKING TICKET TO JAPAN
+          </h1>
+
+          <div class="item-center flex flex-col justify-center gap-11">
+            <input
+              type="text"
+              placeholder="NAME"
+              class="w-[463px] rounded-md bg-[#1A2430] px-11 py-5 text-lg font-medium tracking-wide text-white/50 placeholder:text-white/50 focus:outline-none"
+            />
+            <input
+              type="email"
+              placeholder="EMAIL"
+              class="w-[463px] rounded-md bg-[#1A2430] px-11 py-5 text-lg font-medium tracking-wide text-white/50 placeholder:text-white/50 focus:outline-none"
+            />
+            <input
+              type="text"
+              placeholder="PHONE NUMBER"
+              class="w-[463px] rounded-md bg-[#1A2430] px-11 py-5 text-lg font-medium tracking-wide text-white/50 placeholder:text-white/50 focus:outline-none"
+            />
+            <input
+              type="text"
+              placeholder="DESTINATION"
+              class="w-[463px] rounded-md bg-[#1A2430] px-11 py-5 text-lg font-medium tracking-wide text-white/50 placeholder:text-white/50 focus:outline-none"
+            />
+          </div>
+        </div>
+        <div class="place-self-end pr-32">
+          <button
+            class="rounded-md border-2 border-accent px-16 py-7 text-lg font-semibold transition duration-300 hover:bg-accent"
+          >
+            BOOKING TICKET
+          </button>
+        </div>
+      </section>
     </main>
+
+    <footer class="relative">
+      <section class="container text-center font-medium">
+        <h2 class="text-[25px] text-white/50">WE HAVE A TRUSTED AGENT</h2>
+        <div class="mt-10 flex items-center justify-evenly text-[40px]">
+          <h3>ANDRE<span class="text-white/50">TRAVEL</span></h3>
+          <h3 class="text-white/50">LAGITRAVEL</h3>
+          <h3 class="text-white/50">SEDANGTRAVEL</h3>
+        </div>
+      </section>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="">
+        <path
+          fill="#192430"
+          fill-opacity="1"
+          d="M0,160L80,149.3C160,139,320,117,480,138.7C640,160,800,224,960,229.3C1120,235,1280,181,1360,154.7L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+        ></path>
+      </svg>
+      <div class="bg-[#192430] py-32">
+        <div class="container my-10 h-[2px] bg-white"></div>
+        <h2 class="text-center text-xl font-semibold">
+          COPYRIGHT ANDRE FARHAN SAPUTRA 2021
+        </h2>
+      </div>
+    </footer>
 
     <script type="module" src="dist/script/index.js"></script>
   </body>
